# llm-wiki_obsidian_hermes_r0b0tlabbra1n

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-11_143810-llm-wiki-obsidian-hermes-r0b0tlabbra1n.md
docs/: architecture.md  release-checklist.md  tutorial.md
docs/plans/: 2026-05-11_173951-r0b0tlabbra1n-holistic-grade-plan.md  2026-05-11_181021-r0b0tlabbra1n-100-plan.md
docs/research/: source-dossier.md
docs/reviews/: 2026-05-11-r0b0tlabbra1n-100-final-regrade.md  2026-05-11-r0b0tlabbra1n-final-regrade.md  2026-05-11-r0b0tlabbra1n-holistic-grade.md  rubric-checklist.md
evals/: gold_queries.yaml
hermes/cron_prompts/: heartbeat.md  weekly-audit.md
hermes/cron_scripts/: heartbeat.py  weekly_audit.py
mcp_server/: README.md  brain_mcp.py  manifest.json
r0b0tlabbra1n/: __init__.py  cli.py  config.py  models.py  paths.py
r0b0tlabbra1n/evals/: retrieval_eval.py
r0b0tlabbra1n/index/: graph_index.py  sqlite_index.py
r0b0tlabbra1n/ingest/: hermes_sessions.py
r0b0tlabbra1n/memory/: extract.py  promote.py  retrieve.py
r0b0tlabbra1n/security/: path_safety.py  raw_policy.py  secret_scan.py
r0b0tlabbra1n/vault/: __init__.py  frontmatter.py  hashes.py  initialize.py  links.py  lint.py  write_ops.py
scripts/: quality_gate.sh
tests/: __init__.py  test_frontmatter.py  test_hermes_session_ingest.py  test_init_vault.py  test_links.py  test_lint.py  test_mcp_server_contract.py  test_memory.py  test_quality_hardening.py  test_search.py  test_secret_scan.py  test_utilities_and_eval.py
(+74 files in other folders)
